UI: Fixes z-index of version info so that a popup message is shown above pages slideouts Cleanup: Removes outdated styles

--- a/structr-app/src/main/resources/structr/css/main.css
+++ b/structr-app/src/main/resources/structr/css/main.css
@@ -363,29 +363,6 @@ input[type="checkbox"].mr-0 {
 	content:")";
 }
 
-#header .structr-version {
-	font-size: .75rem;
-}
-
-#header .structr-version:empty:before {
-	content: "No version info available.";
-}
-
-#header .structr-version a,
-#header .structr-version a:visited,
-#header .structr-version a:hover {
-	color: var(--solid-white);
-	text-decoration: none;
-}
-
-#header .structr-version a, #header .structr-version span {
-	vertical-align: top;
-}
-
-#header .structr-version .edition-icon {
-	margin-left: 5px;
-}
-
 #function-bar {
 	display: flex;
 	align-items: center;
